# bignum

./: .gitignore  CMakeLists.txt  LICENSE
include/bignum/: Access.hpp  Addition.hpp  ArithmeticOperators.hpp  BigUnsigned.hpp  Bits.hpp  Defines.hpp  DigitSet.hpp  Digits.hpp  IntWrapper.hpp  Integer.hpp  LogicOperators.hpp  ModularMultiplication.hpp  NonEmptyVector.hpp  Operations.hpp  Operators.hpp  ShiftOperators.hpp  Types.hpp  Unsigned.hpp  Utility.hpp  Utils.hpp  bignum.hpp
include/bignum/ArrayArithmetics/: ArrayDiv.hpp  ArrayMul.hpp  ArrayShift.hpp  ArraySubAdd.hpp
include/bignum/ArrayLogic/: ArrayLogic.hpp
include/bignum/Arrays/: AdditiveOperations.hpp  Arrays.hpp  Comparators.hpp  Division.hpp  Multiplication.hpp  Shifts.hpp
include/bignum/Concepts/: Concepts.hpp
include/bignum/Digits/: Arithmetics.hpp
include/bignum/IntegerOperators/: AddDiff.hpp  Bitshift.hpp  BitwiseLogic.hpp  Comparison.hpp  MulDiv.hpp  Stream.hpp
include/bignum/Operators/: AddDiff.hpp  Bitshift.hpp  BitwiseLogic.hpp  MulDiv.hpp  Stream.hpp  UnsignedBitshiftOperators.hpp  UnsignedComparisonOperators.hpp
include/bignum/Operators.hpp/: UnsignedComparisonOperators.hpp
include/bignum/Ranges/: Additive.hpp  Algorithms.hpp  Comparators.hpp  Conversions.hpp  Division.hpp  Multiplication.hpp  Shifts.hpp  String.hpp
include/bignum/UnsignedOperators/: Bitshift.hpp  BitwiseLogic.hpp  Comparison.hpp  MulDiv.hpp  Stream.hpp
lib/: ArithmeticOperators.cpp  BigUnsigned.cpp  CMakeLists.txt  Operations.cpp  ShiftOperators.cpp
lib/Digits/: Arithmetics.cpp
src/: CMakeLists.txt  DigitSet.cpp  Unsigned.cpp  Utility.cpp
test/: AdditionOperatorTests.cpp  BinaryLeftShiftOperatorTests.cpp  BinaryRightShiftOperatorTests.cpp  CMakeLists.txt  ConstructorsTests.cpp  DivisionOperatorTests.cpp  LessThanOperatorTests.cpp  MassiveCalculationTests.cpp  ModuloOperatorTests.cpp  MultiplicationOperatorTests.cpp  RSATests.cpp  StringConversionTests.cpp  SubtractionOperatorTests.cpp  Utils.hpp  test.cpp
test/ArrayArithmeticsTests/: ApproxDivTests.cpp  ArrayAddTests.cpp  ArrayDivisionOperatorTests.cpp  ArrayLeftShiftOperatorTests.cpp  ArrayMulSubTests.cpp  ArrayMultiplicationOperatorTests.cpp  ArrayRightShiftOperatorTests.cpp  ArraySubtractionTests.cpp
test/ArrayLogicsTests/: ArrayLessThanOperatorTests.cpp
test/DigitOperatorsTests/: DigitDivisionTests.cpp  DigitMultiplicationTests.cpp  ShiftsTests.cpp
test/UtilsTests/: LeadingZeroesTests.cpp  TopBitTests.cpp
tests/: CMakeLists.txt  TestHelpers.hpp  UnsignedComparatorsTests.cpp  UnsignedConstructorsTests.cpp  UtilityTests.cpp  main.cpp
tests/Addition/: AdditionTests.cpp
tests/DigitSet/: DigitSetTests.cpp
tests/IntWrapper/: IntWrapperConversionTests.cpp
tests/Integer/: IntegerAddDiffTests.cpp  IntegerAllOperatorsPresentTests.cpp  IntegerBitwiseLogicTests.cpp  IntegerComparisonTests.cpp  IntegerMulDivTests.cpp  IntegerStreamTests.cpp  IntegerTests.cpp
tests/Unsigned/: UnsignedAddDiffTests.cpp  UnsignedAdditionAndSubtractionOperatorsTests.cpp  UnsignedAllOperatorsPresentTests.cpp  UnsignedBinaryShiftTests.cpp  UnsignedBitshiftOperatorsTests.cpp  UnsignedBitshiftTests.cpp  UnsignedBitwiseLogicTests.cpp  UnsignedComparatorTests.cpp  UnsignedComparisonOperatorTests.cpp  UnsignedComparisonTests.cpp  UnsignedIncrementDecrementTests.cpp  UnsignedLogicOperatorTests.cpp  UnsignedMulDivTests.cpp  UnsignedStreamTests.cpp  UnsignedTests.cpp
tests/Utility/: UtilityTests.cpp
